# Jarvis

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DB.md  README.md  README.zh-CN.md  package.json
.github/workflows/: desktop-release.yml  release.yml  rust.yml
.gitnexus/: meta.json
.jarvis/memory/projects/jarvis-roadmap/: MEMORY.md  calendar.md  kanban.md
.jarvis/memory/projects/svelte-learn/: MEMORY.md  calendar.md  kanban.md
.jarvis/skills/code-review/: SKILL.md
.jarvis/skills/pdf-helper/: SKILL.md
app/module/agent/: app.ts  router.ts
app/module/agent/controller/: agent.ts  agent_evaluation.ts  agent_memory.ts  ai.ts  conversation.ts  conversation_analysis.ts  graph_agent.ts  intent.ts  knowledge_base.ts  llm_provider.ts  mcp.ts  mcp_server.ts  prompt.ts  prompt_editor.ts  tool.ts  workflow.ts
app/module/agent/model/: agent.ts  agent_evaluation.ts  agent_workflow.ts  agent_workflow_node.ts  (+12 more)
apps/jarvis/: Cargo.toml
apps/jarvis-cli/: Cargo.toml
apps/jarvis-cli/src/: main.rs  policy.rs  provider.rs  render.rs  runner.rs
apps/jarvis-desktop/: Cargo.toml  README.md  tauri.conf.json
apps/jarvis-desktop/capabilities/: default.json
apps/jarvis-desktop/icons/: icon.icns
apps/jarvis-desktop/scripts/: generate_icons.py
apps/jarvis-desktop/src/: commands.rs  logs.rs  main.rs  prefs.rs  sidecar.rs  tray.rs
apps/jarvis-web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/jarvis-web/src/: App.tsx  diff_render.ts  main.tsx  md_render.tsx  styles.css
apps/jarvis/src/: auth_store.rs  config.rs  doctor_cli.rs  init.rs  login.rs  main.rs  mcp_cli.rs  plugin_cli.rs  project_cmd.rs  provisioner.rs  serve.rs  skill_cli.rs  status.rs  subagents.rs  test_env.rs
config/: config.default.ts  plugin.ts
crates/harness-cloud/: Cargo.toml
crates/harness-cloud/src/: envelope.rs  lib.rs  model.rs  transport.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: activity.rs  agent.rs  agent_profile.rs  approval.rs  conversation.rs  doc.rs  error.rs  hitl.rs  lib.rs  llm.rs  memory.rs  message.rs  permission.rs  plan.rs  progress.rs  project.rs  requirement.rs  requirement_run.rs  store.rs  subagent.rs  tenant.rs  todo.rs  tool.rs  workspace.rs
crates/harness-llm/: Cargo.toml
crates/harness-llm/src/: anthropic.rs  cache_key.rs  codex_auth.rs  google.rs  lib.rs  openai.rs  responses.rs  tokens.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp/src/: client.rs  error.rs  lib.rs  manager.rs  server.rs
crates/harness-mcp/tests/: roundtrip.rs
crates/harness-memory/: Cargo.toml
crates/harness-memory/src/: lib.rs  sliding.rs  summarizing.rs  turns.rs
crates/harness-plugin/: Cargo.toml
crates/harness-plugin/src/: lib.rs  manager.rs  manifest.rs
crates/harness-requirement/: Cargo.toml
crates/harness-requirement/src/: events.rs  lib.rs  manifest.rs  model.rs  roadmap.rs
crates/harness-server/: Cargo.toml  build.rs
crates/harness-server/src/: agent_profiles_routes.rs  auto_mode.rs  auto_mode_routes.rs  chat_runs.rs  conversations.rs  diagnostics.rs  diagnostics_routes.rs  docs_routes.rs  lib.rs  mcp_routes.rs  permissions.rs  plugin_routes.rs  project_binder.rs  project_memory.rs  projects.rs  provider_admin.rs  provider_admin_routes.rs  provider_registry.rs  requirements_routes.rs  roadmap_routes.rs  routes.rs  skill_routes.rs  state.rs  subagents_routes.rs  todo_binder.rs  todos_routes.rs  ui.rs  verification.rs  work_overview_routes.rs  workspace_diff.rs  workspace_files.rs  workspace_find.rs  workspace_terminal.rs  workspaces_routes.rs  worktree.rs
crates/harness-server/tests/: routes.rs  spec_to_done_e2e.rs
crates/harness-skill/: Cargo.toml
crates/harness-skill/assets/defaults/doc/: SKILL.md
crates/harness-skill/assets/defaults/work/: SKILL.md
crates/harness-skill/src/: catalog.rs  lib.rs  manifest.rs  selector.rs
crates/harness-store/: Cargo.toml
crates/harness-store/src/: error.rs  json_file.rs  lib.rs  memory.rs  mysql.rs  permission.rs  postgres.rs  sqlite.rs  workspace.rs
crates/harness-store/tests/: connect.rs
crates/harness-subagents/: Cargo.toml
crates/harness-subagents/examples/: probe.rs
crates/harness-subagents/sidecar/: claude_code.mjs
crates/harness-subagents/src/: claude_code.rs  codex.rs  doc_reader.rs  echo.rs  internal.rs  lib.rs  reviewer.rs  tool_adapter.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: ask.rs  checks.rs  claude_code.rs  codex.rs  doc.rs  echo.rs  exit_plan.rs  fs.rs  git.rs  grep.rs  http.rs  lib.rs  patch.rs  plan.rs  project.rs  requirement.rs  roadmap.rs  sandbox.rs  shell.rs  time.rs  todo.rs  triage_scan.rs  workspace.rs
docs/: user-guide-cli.md  user-guide-coding-agent.md  user-guide-git-ollama.md  user-guide-web.md  user-guide.md
docs/conventions/: rail-panels.md  sidebar-mode-panels.md
docs/design-system/: README.md  README.zh-CN.md  accessibility.md  accessibility.zh-CN.md  components.md  components.zh-CN.md  patterns.md  patterns.zh-CN.md  tokens.md  tokens.zh-CN.md
docs/proposals/: README.md  aicoding-agent.md  aicoding-agent.zh-CN.md  cli.md  client-sdks.md  cloud-blueprint.zh-CN.md  cloud-capabilities.zh-CN.md  codex-provider.md  new-session-resource-manager.zh-CN.md  onboarding.md  permission-modes.md  persistent-todos.md  product-design.md  product-design.zh-CN.md  prompt-caching.md  sandboxing.md  session-execution-context.zh-CN.md  subagents.zh-CN.md  symphony-inspired-orchestration.zh-CN.md  tauri-desktop-client.zh-CN.md  token-estimation.md  web-multi-session-runs.zh-CN.md  web-ui.md  work-orchestration.zh-CN.md
examples/: stream_chat.html
examples/plugins/code-review-pack/: plugin.json
examples/plugins/gitnexus/: plugin.json
scripts/: build.sh  dev.sh
svelte-learn/: index.html  package-lock.json  package.json  tsconfig.json
svelte-learn/src/: App.svelte
svelte-learn/src/components/: StudyPlanForm.svelte  TaskItem.svelte
typings/app/service/: index.d.ts
typings/config/: plugin.d.ts
(+257 files in other folders)
