[workspace]
resolver = "2"
members = [
    "crates/harness-core",
    "crates/harness-llm",
    "crates/harness-server",
    "apps/jarvis",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
harness-core = { path = "crates/harness-core" }
harness-llm = { path = "crates/harness-llm" }
harness-server = { path = "crates/harness-server" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
