[workspace]
resolver = "2"
members = [
    "crates/harness-core",
    "crates/harness-llm",
    "crates/harness-mcp",
    "crates/harness-memory",
    "crates/harness-server",
    "crates/harness-store",
    "crates/harness-tools",
    "apps/jarvis",
    "apps/jarvis-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
harness-core = { path = "crates/harness-core" }
harness-llm = { path = "crates/harness-llm" }
harness-mcp = { path = "crates/harness-mcp" }
harness-memory = { path = "crates/harness-memory" }
harness-server = { path = "crates/harness-server" }
harness-store = { path = "crates/harness-store" }
harness-tools = { path = "crates/harness-tools" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "process"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tempfile = "3"
rmcp = { version = "1.5", default-features = false, features = ["server", "client", "transport-io", "transport-child-process", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros"] }
regex = "1"
ignore = "0.4"
diffy = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
include_dir = "0.7"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
open = "5"
tiktoken-rs = "0.6"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
