[package]
name = "jarvis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal coding-agent front-end for Jarvis. Talks to the harness in-process — no HTTP server."

[[bin]]
name = "jarvis-cli"
path = "src/main.rs"

[dependencies]
harness-core.workspace = true
harness-llm.workspace = true
harness-memory.workspace = true
harness-store.workspace = true
harness-tools.workspace = true

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "io-util", "io-std", "signal"] }
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
