[package]
name = "jarvis-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
open.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
