[package]
name = "jarvis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Jarvis agent runtime: wires the harness crates into a runnable HTTP server."

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
harness-core.workspace = true
harness-llm.workspace = true
harness-mcp.workspace = true
harness-memory.workspace = true
harness-plugin.workspace = true
harness-server.workspace = true
harness-skill.workspace = true
harness-store.workspace = true
harness-subagents.workspace = true
harness-tools.workspace = true

async-trait.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
dialoguer.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
open.workspace = true
reqwest.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

# Persistence-backend opt-ins. Default build ships JSON-file +
# in-memory backends only (zero extra deps). Pass
# `--features sqlite` (or `postgres` / `mysql`) when a SQL backend
# fits the deployment — these forward to the same-named
# `harness-store` features.
[features]
default = []
sqlite = ["harness-store/sqlite"]
postgres = ["harness-store/postgres"]
mysql = ["harness-store/mysql"]
# Cloud/edge runtime support (harness-cloud crate). Currently a no-op
# placeholder until PR-1.1 lands the crate scaffold; the feature gate
# exists so CI can already verify `--features cloud` compiles.
cloud = []
