[package]
name = "harness-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM provider implementations for harness-core (OpenAI today, more later)."

[dependencies]
harness-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tracing.workspace = true
futures.workspace = true
async-stream.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["sync"] }
tiktoken-rs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
