[package]
name = "harness-requirement"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Execution orchestration for Project Requirements: runs, context manifest, verification."

[dependencies]
harness-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
harness-store.workspace = true
