[package]
name = "harness-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Axum HTTP facade exposing the agent harness behind an OpenAI-compatible chat-completions API."

[dependencies]
harness-core.workspace = true
harness-mcp.workspace = true
harness-skill.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
include_dir.workspace = true
thiserror.workspace = true

[dev-dependencies]
harness-store.workspace = true
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
