[package]
name = "harness-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pluggable persistence for the agent harness. JSON-file by default; SQLite / Postgres / MySQL behind opt-in features."

[dependencies]
harness-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
# `sqlx` only compiles when one of the SQL backend features is enabled
# — the default JSON-file backend ships without it so users get a
# zero-extra-deps install.
sqlx = { workspace = true, optional = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true

[features]
# Default: JSON-file + in-memory backends only. SQL backends are
# opt-in extensions — enable with `--features sqlite` (or
# `postgres` / `mysql`) when a DB makes sense for the deployment.
default = []
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]
mysql = ["dep:sqlx", "sqlx/mysql"]
