[package]
name = "harness-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Built-in `Tool` implementations: echo, time, http.fetch, fs.{read,list,write,edit}, code.grep, shell.exec."

[dependencies]
harness-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true
ignore.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "fs"] }
